WIP emr
Signed-off-by: Maximilian Chrzan <maximilian.chrzan@here.com>
Signed-off-by: mchrza <maximilian.chrzan@here.com>