@@ -205,8 +205,19 @@ public class GraphTransformer {
   private NamedState<TaskState.Builder> compile(Step<?> step, State.Builder previousState) {
     NamedState<TaskState.Builder> state = new NamedState<>(step.getClass().getSimpleName() + "." + step.getId(),
         TaskState.builder());
-    if (step instanceof RunEmrJob emrStep && Config.instance.LOCALSTACK_ENDPOINT == null)
-      compile(emrStep, state);
+
+    if (step instanceof RunEmrJob emrStep) {
+      if( Config.instance.LOCALSTACK_ENDPOINT == null)
+        compile(emrStep, state);
+      else {
+        //Inject defaults for local execution
+        emrStep.setSparkParams( "--add-exports=java.base/java.nio=ALL-UNNAMED "
+                + "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED "
+                + "--add-exports=java.base/java.lang.invoke=ALL-UNNAMED "
+                + "--add-exports=java.base/java.util=ALL-UNNAMED " + emrStep.getSparkParams());
+        compile((LambdaBasedStep<?>) emrStep, state);
+      }
+    }
     else if (step instanceof LambdaBasedStep lambdaStep)
       compile(lambdaStep, state);
     else
